add InMemoryTaskManager test